--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
       "module": "commonjs",
       "moduleResolution": "node",
       "outDir": "build",
+      "esModuleInterop": true,
       "emitDecoratorMetadata": true,
       "experimentalDecorators": true,
       "sourceMap": true,
