--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "prepare": "npm run build"
   },
   "devDependencies": {
+    "@types/glob": "^7.1.1",
     "@types/graphql": "^14.0.7",
     "@types/jest": "^24.0.6",
     "@types/lodash.merge": "^4.6.5",
@@ -32,6 +33,7 @@
   },
   "dependencies": {
     "dataloader": "^1.4.0",
+    "glob": "^7.1.3",
     "graphql-subscriptions": "^1.0.0",
     "graphql-tools": "^4.0.4",
     "lodash.merge": "^4.6.1"
