--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "reflect-metadata": "^0.1.13",
     "ts-jest": "^24.0.0",
     "typedi": "^0.8.0",
+    "typedoc": "^0.14.2",
     "typescript": "^3.3.3"
   },
   "dependencies": {
